# sav_pkg

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
sav_pkg/: __init__.py  enums.py
sav_pkg/my_tests/: no_export_transit_WIP.py  test_bgp_export2some_transit.py  test_bgp_noexport2some_transit.py  test_sanity.py  test_utils_e2s.py  test_utils_interfaces.py
sav_pkg/policies/: __init__.py
sav_pkg/policies/aspa/: __init__.py  aspa_e2s.py  aspa_no_e2s.py  aspafull_e2s.py  aspafull_no_e2s.py
sav_pkg/policies/bgp/: __init__.py  bgp_e2s_path_prepending.py  bgp_e2s_prefix_specific.py  bgp_e2s_supersub.py  bgp_export2some.py  bgp_noexport2some.py  bgpfull_e2s_path_prepending.py  bgpfull_e2s_prefix_specific.py  bgpfull_e2s_supersub.py  bgpfull_export2some.py  bgpfull_noexport2some.py
sav_pkg/policies/sav/: __init__.py  bar_sav.py  bar_sav_full.py  bar_sav_ietf.py  bar_sav_pi.py  bar_sav_w_bspi.py  bar_sav_w_pi.py  base_sav_policy.py  efp_a.py  efp_a_w_peers.py  efp_b.py  efp_urpf_alg_a.py  efp_urpf_alg_a_wo_peers.py  efp_urpf_alg_b.py  feasible_path_urpf.py  fp_urpf.py  fp_urpf_all_interfaces.py  fp_urpf_otc.py  loose_urpf.py  procedure_x.py  refined_alg_a.py  rfc8704.py  strict_urpf.py
sav_pkg/scenarios/: __init__.py
sav_pkg/simluation_framework/: __init__.py
sav_pkg/simluation_framework/as_graph_analyzers/: sav_as_graph_analyzer.py
sav_pkg/simluation_framework/scenarios/: __init__.py  sav.py  sav_multiple_reflectors.py  sav_scenario_config.py
sav_pkg/simulation_engine/: __init__.py
sav_pkg/simulation_engine/policies/: __init__.py
sav_pkg/simulation_engine/simulation_engines/: __init__.py  simulation_engine.py
sav_pkg/simulation_framework/: __init__.py  sav_as_graph_analyzer.py  sav_graph_factory.py  utils.py
sav_pkg/simulation_framework/as_graph_analyzers/: __init__.py  as_graph_analyzer.py  sav_as_graph_analyzer.py
sav_pkg/simulation_framework/metric_tracker/: __init__.py  data_key.py  metric.py  metric_key.py  metric_tracker.py
sav_pkg/simulation_framework/scenarios/: __init__.py  aspa_e2s_scenario.py  aspa_e2s_scenario_roa.py  bar_sav_e2s.py  bar_sav_scenario.py  sav.py  sav_multiple_reflectors.py  sav_scenario.py  sav_scenario_bat.py  sav_scenario_bat_ann.py  scenario.py  (+15 more)
sav_pkg/tests/: __init__.py  conftest.py  test_simulation.py
sav_pkg/utils/: __init__.py  diagram.py  diagram_dsr.py  engine_run_config.py  engine_runner.py  utils.py
scripts/: bar_sav_sim.py  bar_sav_sim_e2s.py  bar_sav_sim_e2s_roa.py  bar_sav_sim_roa.py  bat.py  bat_ann.py  bat_aspa.py  comparison.sh  data.csv  dsr.py  e2a.py  e2a_bspi.py  e2a_sh.py  e2s.py  e2s_sh.py  efp_vs_fp_only_customers.py  false_positive.sh  graphing.py  no_export.py  no_export_sh.py  run.sh  run_sim.sh  scheule_job.sh  sim.py  sim_all_interfaces.py  sim_all_interfaces_e2s.py  sim_all_interfaces_e2s_wr.py  sim_apcna.py  sim_apna.py  sim_bar_sav.py  sim_bar_sav_roa.py  sim_dsr.py  sim_e2a.py  sim_e2a_bp.py  sim_e2a_eu.py  sim_e2a_nrda.py  sim_e2s.py  sim_e2s_bp.py  sim_e2s_eu.py  sim_e2s_nrda.py  (+25 more)
scripts/old/: bar_sav_sim.py  sim_all_interfaces.py  sim_apna.py  sim_dsr.py  sim_e2a_eu.py  sim_e2s.py  sim_graph.py  sim_no_e2s.py  sim_no_e2s_eu.py  sim_no_providers.py
(+1093 files in other folders)
