[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sav_pkg"
version = "0.0.1"
requires-python = ">=3.10"
description = "Extension to BGPy to simulation Source Address Validation"
readme = "README.md"
authors = [
    {name = "Nicholas Scaglione", email = "njscaglione@gmail.com"},
]
maintainers = [
  {name = "Nicholas Scaglione", email = "njscaglione@gmail.com"},
]
license = {file = "LICENSE.txt"}
keywords = [
    "SAV",
    "sav_pkg",
    "BGPy",
    "bgpy",
    "bgpy_pkg",
    "BGP",
    "Caida",
    "CAIDA",
    "Simulation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers"
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "requests==2.31.0",
    "requests-cache==1.2.0",
    "roa-checker==1.1.4",
    "frozendict==2.4.0",
    "graphviz==0.20.1",
    "pillow==10.2.0",
    "matplotlib==3.8.3",
    "pytest==8.0.1",
    "PyYAML~=6.0",
    "tqdm==4.66.2",
    "yamlable==1.1.1",
]

[project.urls]
Homepage = "https://https://github.com/nscags/sav_pkg"

[project.scripts]
bgpy = "bgpy.__main__:main"

[project.optional-dependencies]
test = [
    "black==24.2.0",
    "pre-commit==3.6.2",
    "types-requests==2.31.0.20240218",
    "types-PyYAML==6.0.12.12",
    "mypy==1.8.0",
    "flake8==7.0.0",
    "tox==4.13.0",
    "pytest-xdist==3.5.0",
    "ruff==0.2.2",
]

[tool.setuptools]
include-package-data = true

# https://stackoverflow.com/a/76214408/8903959
[tool.setuptools.package-data]
"bgpy" = ["py.typed"]

# https://stackoverflow.com/a/76214408/8903959
# [tool.setuptools.packages.find]
# where = ["bgpy"]

[tool.pytest.ini_options]
python_files = ["test*.py"]
python_classes = ["Test*"]
python_functions = ["test*"]
# addopts = "-m 'not slow'"  # -n 6
markers = [
    "slow",  # All slow tests
    "framework",  # All framework tests
    "unit_tests",  # All unit tests
    "engine",  # All engine tests
    "caida_collector_base_funcs",  # other funcs in caida collector
    "data_extraction_funcs",  # Related to reading data from file
    "html_funcs",  # Funcs related to html
    "read_file_funcs",  # Reading caida files
]
filterwarnings = [
    "ignore::DeprecationWarning:yamlable",
    "ignore::DeprecationWarning:tqdm",
    "ignore::DeprecationWarning:dateutil.tz.tz",
]

[tool.mypy]
mypy_path = "sav_pkg"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
max-line-length = 88

[tool.coverage.run]
branch = true
omit = [
    "*tests*",
    "*__init__*"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Excludes lines overrides pragma: no cover, so add it back
    "pragma: no cover",
    # Code below this is not meant to be tested
    "raise NotImplementedError",
    # Code that isn't meant to be run
    "if __name__ == .__main__.:"
]
